--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
 <script src="assets/js/chart.min.js"></script>
-<script src="assets/js/app.js"></script>
+<script type="module" src="assets/js/app.js"></script>
 </body>
 
 </html>
